fixed overflow and added styling

--- a/src/style/header.css
+++ b/src/style/header.css
@@ -15,6 +15,11 @@ header {
   gap: 40px;
 }
 
+.profile-picture {
+  border-radius: 40px;
+  overflow: hidden;
+}
+
 .name {
   font-size: 4em;
   margin: 8px;
