--- a/src/style/projects.css
+++ b/src/style/projects.css
@@ -1,9 +1,12 @@
 .projects-section {
-  background-color: blue;
-  padding: 24px 40px;
+  background-color: rgb(238, 238, 238);
+  /* width: 100vw; */
+  /* padding: 24px 40px; */
   display: flex;
   flex-direction: column;
-  align-self: center;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* align-self: center; */
   gap: 24px;
 }
 
@@ -16,13 +19,12 @@
 }
 
 .project-container:not(:last-child) {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.283);
   padding-bottom: 24px;
 }
 
 .project-container:nth-child(2n) {
   flex-direction: row-reverse;
-  /* text-align: right; */
 }
 
 .project-description-container {
@@ -45,8 +47,7 @@
 
 @media (max-width: 500px) {
   .projects-section {
-    padding: 16px 30px;
-    /* width: 100; */
+    padding: 16px 0px;
   }
 
   .project-name {
@@ -57,7 +58,6 @@
   .project-container, 
   .project-container:nth-child(2n) {
     flex-direction: column;
-    padding: 0;
   }
   .project-description-container {
     width: 70vw;
