--- a/src/style/skills.css
+++ b/src/style/skills.css
@@ -1,5 +1,5 @@
 .skills-section {
-  background-color: red;
+  background-color: rgba(222, 210, 199, 0.722);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
